# WOFA

./: .gitignore  README.md  config.py  netlify.toml  overview.md  pipeline.py  pyproject.toml  requirements.txt
.github/workflows/: pipeline.yml
collectors/: cisa_kev.py  lifecycle.py  msrc.py  os_versions.py  release_health.py
output/: CNAME  cve-search.html  index.html  metadata.json  resources.html  windows-10-1607.html  windows-10-1809.html  windows-10-21h2.html  windows-10-22h2.html  windows-11-22h2.html  windows-11-23h2.html  windows-11-24h2.html  windows-11-25h2.html  windows-11-26h1.html  windows-server-2012.html  windows-server-2016.html  windows-server-2019.html  windows-server-2022.html  windows-server-2025.html  windows_release_feed.rss
output/v1/: cve_index.json  windows_data_feed.json
processors/: merge.py  rss.py  site.py
templates/: base.html  cve_search.html  index.html  os_version.html  resources.html
